src/jit/snapshots/test__alloc_max.snap
---
source: src/jit/register_alloc.rs
expression: lifetimes
---
[10, -, -, -, -, -, -, -, -] zdi = args[0]
[ 9, 7, -, -, -, -, -, -, -] zax = x(zdi)10
[ 8, 6, 1, -, -, -, -, -, -] zcx = x(zdi)11
[ 7, 5, 0, 3, -, -, -, -, -] zcx = add zax, zcx
[ 6, 4, -, 2, 2, -, -, -, -] zdx = srl zcx, 31
[ 5, 3, -, 1, 1, -, -, -, -] x(zdi)12 = zdx
[ 4, 2, -, 0, 0, 2, -, -, -] zcx = and zcx, zdx
[ 3, 1, -, -, -, 1, -, -, -] x(zdi)11 = zcx
[ 2, 0, -, -, -, 0, 1, -, -] zax = add zax, zcx
[ 1, -, -, -, -, -, 0, -, -] x(zdi)10 = zax
[ 0, -, -, -, -, -, -, 1, -] zax = x(zdi)1
[--, -, -, -, -, -, -, 0, 1] zax = add zax, 1040
[--, -, -, -, -, -, -, -, 0] ret 0, zax

